@@ -2,17 +2,12 @@ package nl.roykovic.AOC;
 
 import nl.roykovic.AOC.domain.FileSystem.Directory;
 import nl.roykovic.AOC.domain.FileSystem.FileSystemFactory;
-import nl.roykovic.AOC.domain.Rucksack;
-import nl.roykovic.AOC.domain.RucksackFactory;
 import org.junit.jupiter.api.Test;
 import org.springframework.core.io.ClassPathResource;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FileSystemFactoryTest {
     @Test
@@ -39,8 +34,7 @@ public class FileSystemFactoryTest {
 
         long sizeToFreeUp = neededSize - unusedSize;
 
-        List<Long> bigEnoughDirs = directories.stream().map(Directory::getSize).filter(it -> it>=sizeToFreeUp).collect(Collectors.toList());
-        Collections.sort(bigEnoughDirs);
+        List<Long> bigEnoughDirs = directories.stream().map(Directory::getSize).filter(it -> it >= sizeToFreeUp).sorted().toList();
         System.out.println(bigEnoughDirs.get(0));
     }
 }
